--- a/src/index.css
+++ b/src/index.css
@@ -45,6 +45,11 @@ nav .nav-button {
     margin: 10px;
 }
 
+nav .nav-button:disabled {
+    background-color: rgb(189, 180, 180);
+    color: rgb(160, 38, 75);
+}
+
 nav .logo-container {
     width: 170px;
     margin: 15px;
@@ -60,4 +65,17 @@ nav .logo {
     height: 100vh;
     position: fixed;
     background: linear-gradient(to bottom, rgba(0, 0, 0, 0.65) 0%, rgba(0, 0, 0, 0) 100%);
+}
+
+/* Auth Modal */
+.auth-modal {
+    /*position: absolute;  whole screen */
+    top: 175px;
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 360px;
+    height: 600px;
+    background-color: rgb(255, 255 ,255);
+    border-radius: 10px;
+    padding: 40px;
 }
