--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,10 @@ html, body {
     padding: 0;
 }
 
+h2 {
+    font-style: italic;
+}
+
 * {
     font-family: 'Readex-Pro', sans-serif;
 }
@@ -22,6 +26,23 @@ html, body {
 
 .primary-button:hover {
     background: linear-gradient(260deg, rgb(254, 48, 114), rgb(255, 89, 64));   
+}
+
+.secondary-button {
+    color: rgb(121, 119, 119);
+    background-color: rgb(255, 255 ,255);
+    font-weight: 500;
+    font-size: 15px;
+    text-transform: uppercase;
+    padding: 12px 30px;
+    border-radius: 30px;
+    border: solid 2px rgb(121, 119, 119);
+    margin: 6px;
+}
+
+.secondary-button:hover {
+    color: rgb(48, 48, 48);
+    border: solid 2px rgb(48, 48, 48);
 }
 
 body {
@@ -78,4 +99,20 @@ nav .logo {
     background-color: rgb(255, 255 ,255);
     border-radius: 10px;
     padding: 40px;
+}
+
+.auth-modal .close-icon {
+    float: right;
+}
+
+.auth-modal form {
+    display: flex;
+    flex-direction: column;
+}
+
+.auth-modal input[type=password],
+.auth-modal input[type=email] {
+    padding: 8px;
+    margin: 8px;
+    font-size: 17px;
 }
