--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,7 @@
 html, body {
     margin: 0;
     padding: 0;
+    text-align: center;
 }
 
 h2 {
@@ -12,6 +13,11 @@ h2 {
 
 * {
     font-family: 'Readex-Pro', sans-serif;
+}
+
+.primary-title {
+    font-size: 90px;
+    color: rgb(255, 255 ,255);
 }
 
 .primary-button {
@@ -43,10 +49,6 @@ h2 {
 .secondary-button:hover {
     color: rgb(48, 48, 48);
     border: solid 2px rgb(48, 48, 48);
-}
-
-body {
-    text-align: center;
 }
 
 /* Nav Bar */
@@ -84,14 +86,22 @@ nav .logo {
 .overlay {
     width: 100vw;
     height: 100vh;
-    position: fixed;
-    background: linear-gradient(to bottom, rgba(0, 0, 0, 0.65) 0%, rgba(0, 0, 0, 0) 100%);
+    position: relative; /* position fixed causes vertical scrollbars to disappear */
+    background: linear-gradient(to bottom, rgba(0, 0, 0, 0.65) 0%, rgba(0, 0, 0, 0) 100%), url('images/background.jpg');
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-attachment: fixed;
+}
+
+.home {
+    margin-top: 15vh;
 }
 
 /* Auth Modal */
 .auth-modal {
     /*position: absolute;  whole screen */
-    top: 175px;
+    top: 50px;
     margin-left: auto;
     margin-right: auto;
     max-width: 360px;
@@ -99,6 +109,8 @@ nav .logo {
     background-color: rgb(255, 255 ,255);
     border-radius: 10px;
     padding: 40px;
+    left: 0;
+    right: 0;
 }
 
 .auth-modal .close-icon {
