--- a/client/src/index.css
+++ b/client/src/index.css
@@ -299,7 +299,7 @@ nav .logo {
 }
 
 /* Chat Display */
-.chat-display {
+.chat-display, .matches-display {
     padding: 20px;
     height: 60vh;
     overflow-y: auto; /* scroll messages */
